notes add to database

--- a/public/index.html
+++ b/public/index.html
@@ -93,18 +93,19 @@
                             <h5 class="card-title">Add Notes</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">No note selected at this time</p>
+                            
                             <!-- example form -->
 
                             <div id="enter-note">
-                                <form>
+                                <p class="card-text">No note selected at this time</p>
+                                <!-- <form>
                                     <div class="form-group">
                                         <label for="exampleFormControlTextarea1">Note for... Article title</label>
                                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 
                                     </div>
                                     <button class="btn btn-success">Save Note</button>
-                                </form>
+                                </form> -->
                             </div>
 
                         </div>
